Исправление кода, для прохождения тестов postman